<resources>
    <string name="app_name">DADM BallDontLie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="title_player">Player Profile</string>
    <string name="title_team">Team Profile</string>
    <string name="about_message">Balls Don\'t Lie by \n\n Francisco Arjona \n\n Alejandro Ávila \n\n Christian García \n\n Daniel García \n\n Carlos Ramirez \n\n Developed for DADM 2022</string>

    <string name="title_search">Search</string>
    <string name="title_favs">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="position_C">Center</string>
    <string name="position_F">Forward</string>
    <string name="position_G">Guard</string>
    <string name="conference_East">East</string>
    <string name="conference_West">West</string>
    <string name="division_NW">Northwest</string>
    <string name="division_SW">Southwest</string>
    <string name="division_SE">Southeast</string>
    <string name="division_AT">Atlantic</string>
    <string name="division_PA">Pacific</string>
    <string name="division_CE" translatable="false">Central</string>
    <string name="tabLayoutPlayers">Players</string>
    <string name="tabLayoutTeams">Teams</string>
    <string name="search_error_message">Something went wrong, please try again</string>
    <string name="stat_error_message">there are no stats for this player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="stat_season_stats">Stats from Season %1$s</string>
    <string name="stat_ast_def">ast = Assists</string>
    <string name="stat_ast" translatable="false">ast</string>
    <string name="stat_blk_def">blk = Blocks</string>
    <string name="stat_blk" translatable="false">blk</string>
    <string name="stat_dreb_def">dreb = Defensive Rebounds</string>
    <string name="stat_dreb" translatable="false">dreb</string>
    <string name="stat_fg3_pct_def">fg3_pct = 3 Point Field Goals Percentage</string>
    <string name="stat_fg3_pct" translatable="false">fg3_pct</string>
    <string name="stat_fg3a_def">fg3a = 3 Point Field Goals Attempted</string>
    <string name="stat_fg3a" translatable="false">fg3a</string>
    <string name="stat_fg3m_def">fg3m = 3 Point Field Goals Made</string>
    <string name="stat_fg3m" translatable="false">fg3m</string>
    <string name="stat_fg_pct_def">fg_pct= Point Field Goals Percentage</string>
    <string name="stat_fg_pct" translatable="false">fg_pct</string>
    <string name="stat_fga_def">fga = Point Field Goals Attempted</string>
    <string name="stat_fga" translatable="false">fga</string>
    <string name="stat_fgm_def">fgm = Point Field Goals Made</string>
    <string name="stat_fgm" translatable="false">fgm</string>
    <string name="stat_fta_def">fta = Free Throws Attempted</string>
    <string name="stat_fta" translatable="false">fta</string>
    <string name="stat_ftm_def">ftm = Free Throws Made</string>
    <string name="stat_ftm" translatable="false">ftm</string>
    <string name="stat_min_def">min = Minutes</string>
    <string name="stat_min" translatable="false">min</string>
    <string name="stat_oreb_def">oreb = Offensive Rebounds</string>
    <string name="stat_oreb" translatable="false">oreb</string>
    <string name="stat_pf_def">pf = Personal Fouls</string>
    <string name="stat_pf" translatable="false">pf</string>
    <string name="stat_pts_def">pts = Points</string>
    <string name="stat_pts" translatable="false">pts</string>
    <string name="stat_reb_def">reb = Rebounds</string>
    <string name="stat_reb" translatable="false">reb</string>
    <string name="stat_stl_def">stl = Steals</string>
    <string name="stat_stl" translatable="false">stl</string>
    <string name="stat_turnover_def">tor = Turnover</string>
    <string name="stat_turnover" translatable="false">tor</string>
    <string name="stat_ft_pct_def">ft_pct = Free Throws Percentage</string>
    <string name="stat_ft_pct" translatable="false">ft_pct</string>
    <string name="stat_glossary">Glossary</string>

    <string name="stat_default_value" translatable="false">0.0</string>
    
    <string name="positionC">Center</string>
    <string name="positionF">Forward</string>
    <string name="positionG">Guard</string>

    <string name="units">ENG</string>
    <string name="height_unit_eng" translatable="false">%1$s\'%2$s\"</string>
    <string name="weight_unit_eng" translatable="false">"%1$s lbs"</string>
    <string name="height_unit_int" translatable="false">%1$s m</string>
    <string name="weight_unit_int" translatable="false">"%1$s kg"</string>

    <string name="player_deleted">Player %1$s %2$s has been deleted from your favourites</string>
    <string name="team_deleted">Team %1$s has been deleted from your favourites</string>
    <string name="undo_action">Undo</string>
    

    <!-- Team Profile -->
    <string name="team_conference">Conference %1$s</string>
    <string name="team_division">Division %1$s</string>
</resources>