<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dadmballdontlie.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.dadmballdontlie.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_navigation_search_to_teamFragment"
            app:destination="@id/teamFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favs"
        android:name="com.example.dadmballdontlie.ui.favs.FavsFragment"
        android:label="@string/title_favs"
        tools:layout="@layout/fragment_favs" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.dadmballdontlie.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.dadmballdontlie.ui.player.PlayerFragment"
        android:label="@string/title_player"
        tools:layout="@layout/fragment_player" />
    <fragment
        android:id="@+id/teamFragment"
        android:name="com.example.dadmballdontlie.ui.team.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_team" />
</navigation>